[project]
name = "sfzlint-container"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "AkiyukiOkayasu", email = "akiyuki.okayasu@gmail.com" }
]
dependencies = [
    "pyyaml>=6.0.1",
    "sfzlint @ git+https://github.com/jisaacstone/sfzlint.git",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sfzlint_container"]
